--- a/mod1_solution/index.html
+++ b/mod1_solution/index.html
@@ -6,9 +6,11 @@
 </head>
 <body>
  <div class="container" ng-controller="LunchCheckController">
-   <input type="text">
-   <button>Press me</button>
-   <span>placeholder:</span>
+   <input type="text" ng-model="placeholder">
+   <button ng-click="buttonClick(placeholder)">Press me</button>
+   <div>
+     {{message}}
+   </div>
  </div>
   <script src="angular.js"></script>
   <script src="app.js"></script>
